Images change and layouts,service routes delated

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -48,7 +48,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 text-center">
-          <h4 class="h4-type2">What We Do</h4>
+          <h4 class="h4-type2">Our Vission & Mission</h4>
           <div class="border-bar2 margin-t20 "></div>
           <p class="p-type-3 color-grey margin-t20">We understand and believe that urban tree planting can result in cooler temperatures and reduced air pollution for millions of urban residents. Previous research has already shown that trees are capable of both cooling and cleaning the air in urban spaces.Trees are also proven to remove carbon from the air, getting absorbed and stored as cellulose in their trunks, branches, and leaves (a process known as sequestration).Trees can make a city sidewalk prettier.
           </p>
@@ -57,25 +57,6 @@
     </div>
   </section>
   <!-- what we do  end-->
-
-  {{!-- <!-- features -->
-  <section id="features">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6 col-xs-12 parallax-window" data-parallax="scroll" data-image-src="images/whoweare-a.jpg" data-speed="0.4">
-        </div>
-        <div class="col-md-6 col-md-offset-0 col-sm-10 col-sm-offset-1 col-xs-10 col-xs-offset-1 padding-tb100">
-          <span class="ti-desktop icon-type1"></span>
-          <h4 class="h4-type1 margin-t10">Tree Planting</h4>
-          <div class="border-bar margin-t20"></div>
-          <p class="p-type-4 color-grey margin-t10">Three trees placed strategically around a single-family home can cut summer air conditioning needs by up to 50 percent. By reducing the energy demand for cooling our houses, we reduce carbon dioxide and other pollution emissions from power plants. It isn't just Carbon Dioxide that trees absorb from the air, the also soak up a range of other pollutants and toxins which are emitted by our everyday activities...
-          </p>
-          <a href="/route/apply" class="btn login-btn">Find More</a>
-        </div>
-      </div>
-    </div>
-  </section>
-  <!-- features end--> --}}
 
   <!-- who we are -->
   <section id="whoweare">
@@ -111,8 +92,8 @@
 
         <div class="col-md-4 margin-t30">
           <div class="portfolio-item">
-            <a href="images/portfolio/green/item47.jpg" data-lightbox="portfolio">
-              <img src="images/portfolio/green/item47.jpg" alt="">
+            <a href="/images/portfolio/green/item1.jpg" data-lightbox="portfolio">
+              <img src="/images/portfolio/green/item1.jpg" alt="">
             </a>
           </div>
         </div>
@@ -120,16 +101,16 @@
 
         <div class="col-md-4 margin-t30">
           <div class="portfolio-item">
-            <a href="images/portfolio/green/item5.jpg" data-lightbox="portfolio">
-              <img src="images/portfolio/green/item5.jpg" alt="">
+            <a href="/images/portfolio/green/item2.jpg" data-lightbox="portfolio">
+              <img src="/images/portfolio/green/item2.jpg" alt="">
             </a>
           </div>
         </div>
 
         <div class="col-md-4 margin-t30">
           <div class="portfolio-item">
-            <a href="images/portfolio/green/item6.jpg" data-lightbox="portfolio">
-              <img src="images/portfolio/green/item6.jpg" alt="">
+            <a href="/images/portfolio/green/item3.jpg" data-lightbox="portfolio">
+              <img src="/images/portfolio/green/item3.jpg" alt="">
             </a>
           </div>
         </div>
@@ -138,7 +119,7 @@
       
       <div class="col-md-12 margin-t50">
         <div class="is_centered">
-            <a href="#" class="btn btn-primary btn-block">Find Out More!</a>
+            <a href="/route/about" class="btn btn-primary btn-block">Find Out More!</a>
         </div>
       </div>
 
