--- a/views/contact.handlebars
+++ b/views/contact.handlebars
@@ -53,7 +53,7 @@
               <span class="icon ti-email"></span>
             </div>
 
-            <p class="col-md-9 col-xs-12">career@greenwavetelco.com</p>
+            <p class="col-md-9 col-xs-12">plant@greenwayin.org</p>
           </div>
 
           <div class="col-md-12 col-sm-12 col-xs-12 contact_detail row">
