--- a/views/layouts/layout.handlebars
+++ b/views/layouts/layout.handlebars
@@ -60,13 +60,12 @@
             <ul class="main-nav">
               <li><a href="/">Home</a></li>
               <li><a href="/route/about">About</a></li>
-              <li><a href="/route/services">Services</a></li>
               <li><a href="/route/portfolio">Portfolio</a></li>
               <li><a href="/route/contact">Contact</a></li>
             </ul>
           </div>
           <div class="col-md-2">
-            <a href="https://sso.godaddy.com/login?app=email&realm=pass" target="blank" class="login-btn btn pull-right">Staff Sign In</a>
+            <a href="https://sso.godaddy.com/login?app=email&realm=pass" class="login-btn btn pull-right">Staff Sign In</a>
           </div>
         </div>
       </div>
