--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -12,7 +12,7 @@
             <div class="border-bar margin-t20 mgrn-middle"></div>
             <p class="p-type-2 margin-t20">Greenway International Foundation has taken a bold step and welcomes partnership with organizations, private and public entities to setup a working relationship that creates a sustainable healthy living by providing oxygen, water conservation, soil preservation and climate amelioration.
               </p>
-            <a href="/route/apply" class="btn login-btn">Apply Now!</a>
+            <a href="/route/apply" class="btn login-btn">Join Now!</a>
           </div>
         </li>
 
@@ -23,7 +23,7 @@
             <div class="border-bar margin-t20 mgrn-middle"></div>
             <p class="p-type-2 margin-t20">Greenway International Foundation has taken a bold step and welcomes partnership with organizations, private and public entities to setup a working relationship that creates a sustainable healthy living by providing oxygen, water conservation, soil preservation and climate amelioration.
             </p>
-            <a href="/route/apply" class="btn login-btn">Apply Now!</a>
+            <a href="/route/apply" class="btn login-btn">Join Now!</a>
           </div>
         </li>
 
@@ -34,7 +34,7 @@
             <div class="border-bar margin-t20 mgrn-middle"></div>
             <p class="p-type-2 margin-t20">Greenway International Foundation has taken a bold step and welcomes partnership with organizations, private and public entities to setup a working relationship that creates a sustainable healthy living by providing oxygen, water conservation, soil preservation and climate amelioration.
             </p>
-            <a href="/route/apply" class="btn login-btn">Apply Now!</a>
+            <a href="/route/apply" class="btn login-btn">Join Now!</a>
           </div>
         </li>
 
